--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -130,6 +130,13 @@
         margin: 28px 25px 24px -22px;
     }
 
+    .footer-logo1{
+        margin-left: -85px;
+
+    }
+
+
+
     @media only screen and  (min-width: 768px) {
         .bg-custom {
             height: 27rem;
@@ -226,8 +233,10 @@
                                     <a href="{% url 'user:register' %}"
                                        class="btn outline radius-xl btn-sign btn-aware">Sign up <span></span></a>&nbsp;
                                 {% endif %}
+{#                                {% if 'workspace' in request.path %}#}
                                 <a href="{% url 'user:company-register' %}"
-                                   class="btn outline radius-xl btn-sign btn-aware">Company Sign up <span></span></a>
+                                   class="btn outline radius-xl btn-sign btn-aware">Connabo for your business <span></span></a>
+{#                                    {% endif %}#}
                             {% else %}
                                 <a class="btn-link btn-search mr-4" href="{% url 'user:logout' %}"><span><i
                                         class="fas fa-sign-out-alt"></i> &nbsp;&nbsp;Logout</span></a>
@@ -439,8 +448,36 @@
                     <div class="col-12 col-md-3 d-flex justify-content-center wow fadeInUp" data-wow-delay="0.8s">
                         <div class="widget widget_ftabout mb-0 d-flex justify-content-end">
                             <div class="footer-logo mb-0" style="width: 100px; height: 100px;">
-                                <a href="{% url 'home:home' %}" class="text-dark">
-                                    <img src="{% static 'images/logo/color-logo.png' %}" alt="Logo">
+                                <a href="{% url 'home:home' %}" class="">
+                                     <svg version="1.0" style="" class="footer-logo1"
+                                 xmlns="http://www.w3.org/2000/svg"
+                                 width="250" height="70" viewBox="0 0 1628.000000 1628.000000"
+                                 preserveAspectRatio="xMidYMid meet">
+
+                                <g transform="translate(0.000000,1628.000000) scale(0.100000,-0.100000)"
+                                   fill="#74226c" stroke="none">
+                                    <path d="M7255 14494 c-1161 -78 -2312 -504 -3250 -1206 -644 -481 -1190
+-1086 -1610 -1783 -102 -168 -287 -530 -365 -715 -279 -654 -437 -1299 -491
+-2005 -14 -190 -14 -695 0 -885 114 -1503 740 -2873 1791 -3920 783 -780 1711
+-1314 2785 -1604 906 -244 1938 -269 2865 -70 1954 420 3584 1755 4374 3582
+336 778 506 1600 506 2452 0 978 -218 1897 -660 2780 -585 1172 -1556 2142
+-2734 2732 -1000 501 -2083 718 -3211 642z m670 -834 c820 -39 1565 -244 2287
+-627 984 -522 1830 -1412 2293 -2413 212 -457 358 -917 435 -1372 127 -741 95
+-1526 -91 -2238 -301 -1149 -952 -2140 -1889 -2875 -780 -610 -1783 -1008
+-2765 -1095 -66 -6 -141 -13 -166 -15 -106 -12 -624 -5 -791 10 -1241 112
+-2371 628 -3254 1488 -580 564 -1009 1223 -1288 1979 -348 943 -420 1956 -210
+2953 156 746 507 1508 973 2115 289 377 672 757 1036 1030 848 634 1880 1008
+2920 1059 249 12 280 12 510 1z"/>
+                                    <path d="M5282 10107 c-1007 -1007 -1832 -1837 -1832 -1842 0 -11 3661 -3675
+3673 -3675 4 0 7 321 7 712 l0 713 -1125 1125 -1126 1126 1126 1129 1125 1129
+0 708 c0 389 -3 708 -8 708 -4 0 -832 -825 -1840 -1833z"/>
+                                    <path d="M8027 11804 c-4 -4 -7 -278 -7 -608 l0 -601 1162 -1162 1163 -1163
+-1163 -1163 -1162 -1162 0 -613 c0 -336 3 -612 7 -612 12 0 3543 3534 3543
+3545 0 16 -3535 3547 -3543 3539z"/>
+                                </g>
+                            </svg>
+                                     <p class="" style="color: #74226c">CONNABO</p>
+{#                                    <img src="{% static 'images/logo/color-logo.png' %}" alt="Logo">#}
                                 </a>
                             </div>
                         </div>
