new updates content change

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -188,8 +188,8 @@
 
 
     <div class="social">
-{#  <a href="{% url 'home:workspace' %}">#}
-  <a href="#">
+  <a href="{% url 'home:workspace' %}">
+{#  <a href="#">#}
     <div class="social-btn color-telegram">
       <div class="icons8-telegram-app"></div>
       <p class="order-2 google-font">&nbsp;&nbsp;Connabo Biz&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
