new updates content change

--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -234,7 +234,7 @@
                                        class="btn outline radius-xl btn-sign btn-aware">Sign up <span></span></a>&nbsp;
                                 {% endif %}
 {#                                {% if 'workspace' in request.path %}#}
-                                <a href="{% url 'user:company-register' %}"
+                                <a href="{% url 'home:workspace' %}"
                                    class="btn outline radius-xl btn-sign btn-aware">Connabo for your business <span></span></a>
 {#                                    {% endif %}#}
                             {% else %}
