plan page updates and sticky navbar

--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -134,6 +134,9 @@
         margin-left: -85px;
 
     }
+    .svg_logo{
+        margin-left: 52px;
+    }
 
 
 
@@ -144,11 +147,14 @@
 
         .code_connect_line_class {
             margin-top: -18px;
+                    margin-left:-5px;
+
 
         }
 
         .by_stellar_class {
-            margin-left: 155px;
+            {#margin-left: 155px;#}
+            margin-left: 23px;
             margin-top: -32px;
             font-size: 12px;
         font-family: Quicksand;
@@ -157,10 +163,12 @@
         }
 
         .svg_logo {
+                margin-left: -77px;
         }
 
         .dez-page svg {
-            margin-left: 47px;
+                margin-left: -77px;
+            {#margin-left: 47px;#}
 
         }
     }
@@ -171,14 +179,14 @@
     <!-- header -->
     <header class="site-header header header-style1 mo-left py-0">
         <!-- main header -->
-        <div class="sticky-header main-bar-wraper navbar-expand-lg">
+        <div class="main-bar-wraper navbar-expand-lg">
             <div class="main-bar clearfix ">
                 <div class="container clearfix">
                     <!-- website logo -->
                     <div class="logo-header pt-2 pb-0 mostion" style="width: 180px">
                         <a href="{% url 'home:home' %}" class="dez-page p-0">
                             <?xml version="1.0" standalone="no"?>
-                            <svg version="1.0" style="margin-left: 50px" class="svg_logo"
+                            <svg version="1.0" style="" class="svg_logo"
                                  xmlns="http://www.w3.org/2000/svg"
                                  width="250" height="70" viewBox="0 0 1628.000000 1628.000000"
                                  preserveAspectRatio="xMidYMid meet">
