--- a/home/templates/home/temp.html
+++ b/home/templates/home/temp.html
@@ -203,7 +203,7 @@
       </div>
     </div>
     </div>
-    <div class="row features-box-second">
+    <div class="row features-box-second text-center">
     <div class="col-sm-4 mb-2">
       <div class="card h-100">
         <div class="card-body">
