change home page signup btn for company

--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -242,8 +242,8 @@
                                        class="btn outline radius-xl btn-sign btn-aware">Sign up <span></span></a>&nbsp;
                                 {% endif %}
 {#                                {% if 'workspace' in request.path %}#}
-                                <a href="{% url 'home:workspace' %}"
-                                   class="btn outline radius-xl btn-sign btn-aware">Connabo for your business <span></span></a>
+                                <a href="{% url 'user:company-register' %}"
+                                   class="btn outline radius-xl btn-sign btn-aware">Signup <span></span></a>
 {#                                    {% endif %}#}
                             {% else %}
                                 <a class="btn-link btn-search mr-4" href="{% url 'user:logout' %}"><span><i
