--- a/chat/templates/chat/group-chat-js.html
+++ b/chat/templates/chat/group-chat-js.html
@@ -49,7 +49,7 @@
 
         // Group ID for adding members to a group
         $('#add-chat-member-group-id').val(groupId)
-
+        $('#group_menu_right_sidebar').show();
         {# Off Canvas #}
         $('#offcanvas_profile_img_url').prop("src", user_img_url);
         $('#offcanvas_profile_fullname').text(groupTitleName);
