--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -241,10 +241,10 @@
                                     <a href="{% url 'user:register' %}"
                                        class="btn outline radius-xl btn-sign btn-aware">Sign up <span></span></a>&nbsp;
                                 {% endif %}
-{#                                {% if 'workspace' in request.path %}#}
+                                {% if 'workspace' in request.path %}
                                 <a href="{% url 'user:company-register' %}"
                                    class="btn outline radius-xl btn-sign btn-aware">Signup <span></span></a>
-{#                                    {% endif %}#}
+                                    {% endif %}
                             {% else %}
                                 <a class="btn-link btn-search mr-4" href="{% url 'user:logout' %}"><span><i
                                         class="fas fa-sign-out-alt"></i> &nbsp;&nbsp;Logout</span></a>
