domain name changed from stellar to connabo

--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -240,6 +240,8 @@
                                 {% if not 'workspace' in request.path %}
                                     <a href="{% url 'user:register' %}"
                                        class="btn outline radius-xl btn-sign btn-aware">Sign up <span></span></a>&nbsp;
+                                    <a href="{% url 'home:workspace' %}"
+                                       class="btn outline radius-xl btn-sign btn-aware">Connabo for Business <span></span></a>&nbsp;
                                 {% endif %}
                                 {% if 'workspace' in request.path %}
                                 <a href="{% url 'user:company-register' %}"
