--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -392,9 +392,9 @@
                             <h2 class="title text-primary">AI CODE ROOMS</h2>
                             <!--                            <p>An environment which helps to connect people that are looking for AI/Coding solutions, people with no previous communication can connect through a Stellar AI Id which leads to a code room which includes important features like chats, voice calls and video calls.</p>-->
                             <!--                            <p>AI/Coding personal tutors, E-learning Institutions , Companies, students can use such affordable AI Code rooms for personal growth.</p>-->
-                            <p style="color:#74226c">A Stellar AI code-room is a unique SaaS of Stellar AI, which has a
+                            <p style="color:#74226c">A Connabo code-room is a unique SaaS of Stellar AI, which has a
                                 exciting environment where one can do real time live collaborative coding with anyone
-                                you are friends with on the Stellar AI Ecosystem. Every code-room has an owner/admin.
+                                you are friends with on the Connabo Ecosystem. Every code-room has an owner/admin.
                                 Once you find a user/connection on the Ecosystem you have to send that person a friend
                                 request add that person a friend then you can add them in your particular owned
                                 code-room and start with your real time coding , data science , algorithm making , etc.
