--- a/home/templates/home/temp.html
+++ b/home/templates/home/temp.html
@@ -299,8 +299,8 @@
                         <p style="color:#74226c">Develop anything on cloud with no set up. Create collaborative coding
                             workspaces along with your team and work from anywhere through the cloud infrastructure we
                             provide also boost up your storage & RAM of your code-rooms on Connabo.</p>
-                        <a href="{% url 'user:register' %}" class="btn radius-xl btn-sign btn-aware">Start Real Time
-                            Live Collaborative Coding<span></span></a>
+{#                        <a href="{% url 'user:register' %}" class="btn radius-xl btn-sign btn-aware">Start Real Time#}
+{#                            Live Collaborative Coding<span></span></a>#}
                     </div>
                 </div>
             </div>
@@ -321,8 +321,8 @@
                                 community.</p>
 
                             <!--                                <a href="#" class="btn btn-gradient btn-md radius-xl">Explor More</a>-->
-                            <a href="{% url 'user:register' %}" class="btn radius-xl btn-sign btn-aware">Start
-                                Bonding <span></span></a>
+{#                            <a href="{% url 'user:register' %}" class="btn radius-xl btn-sign btn-aware">Start#}
+{#                                Bonding <span></span></a>#}
 
                         </div>
                         <div class="overview-media wow fadeInRight img-move" style="resize: both; overflow: auto;"
@@ -510,8 +510,8 @@
                             <p style="color:#74226c"> Built-in real time collaboration , develop together on the same
                                 code anywhere in the world on any device. Create a workspace and work remotely with your
                                 teams with unique features live audio calls, live video calls and live chatting.</p>
-                            <a href="{% url 'user:register' %}" class="btn radius-xl btn-sign btn-aware">Start
-                                Learning <span></span></a>
+{#                            <a href="{% url 'user:register' %}" class="btn radius-xl btn-sign btn-aware">Start#}
+{#                                Learning <span></span></a>#}
 
                         </div>
                     </div>
@@ -532,8 +532,8 @@
                                 user friendly collaboration
                             </p>
 
-                            <a href="{% url 'user:register' %}" class="btn radius-xl btn-sign btn-aware">Start
-                                Competing <span></span></a>
+{#                            <a href="{% url 'user:register' %}" class="btn radius-xl btn-sign btn-aware">Start#}
+{#                                Competing <span></span></a>#}
 
                         </div>
                         <div class="overview-media wow fadeInRight img-move" style="resize: both; overflow: auto;"
