--- a/users/templates/users/email_verification.html
+++ b/users/templates/users/email_verification.html
@@ -11,7 +11,7 @@
     <link href='https://fonts.googleapis.com/css?family=Quicksand:300,400,700' rel="stylesheet">
     <!--<![endif]-->
 
-    <title>Activation Mail | Stellar AI</title>
+    <title>Activation Mail | Connabo </title>
 
     <style type="text/css">
         body {
@@ -145,7 +145,7 @@
         <tr>
             <td>
                 <div style="overflow:hidden;display:none;font-size:1px;color:#ffffff;line-height:1px;font-family:Arial;maxheight:0px;max-width:0px;opacity:0;">
-                    Welcome to Stellar AI!
+                    Welcome to Connabo!
                 </div>
             </td>
         </tr>
@@ -203,7 +203,7 @@
 
                             <div style="line-height: 35px">
 
-                                Thank you for Signup <span style="color: #5596e6;">Stellar AI</span>
+                                Thank you for Signup <span style="color: #5596e6;">Connabo</span>
 
                             </div>
                         </td>
@@ -245,7 +245,7 @@
 
                                         </p>
                                         <p style="line-height: 24px;margin-bottom:15px;">
-                                            We are happy you signed up for Stellar AI. To start exploring the Stellar AI, click the activate button.
+                                            We are happy you signed up for Connabo. To start exploring the Connabo, click the activate button.
                                         </p>
                                         
 
