--- a/users/templates/users/notebook.html
+++ b/users/templates/users/notebook.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Stellar | Notebook</title>
+    <title> Connabo | Notebook</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -100,9 +100,9 @@
   <!-- Modal content -->
   <div class="modal-content">
 <!--      <p align="right"><span class="close">&times;</span></p>-->
-    <h4 class="pb-3" style="font-weight: 500;line-height: 1.5;">Code room is exclusive functionality of Stellar AI
+    <h4 class="pb-3" style="font-weight: 500;line-height: 1.5;">Code room is exclusive functionality of Connabo
 
-All rights for  development of Stellar AI code room reserve to Stellar AI and Helping libraries.
+All rights for  development of Connabo code room reserve to Connabo and Helping libraries.
 
 It is prohibited to use code room for any illegal, abusive or volient activity</h4>
 
