--- a/users/templates/users/user_notebook.html
+++ b/users/templates/users/user_notebook.html
@@ -102,9 +102,9 @@
   <!-- Modal content -->
   <div class="modal-content">
 <!--      <p align="right"><span class="close">&times;</span></p>-->
-    <h4 class="pb-3" style="font-weight: 500;line-height: 1.5;">Code room is exclusive functionality of Stellar AI
+    <h4 class="pb-3" style="font-weight: 500;line-height: 1.5;">Code room is exclusive functionality of Connabo
 
-All rights for  development of Stellar AI code room reserve to Stellar AI and Helping libraries.
+All rights for  development of Connabo code room reserve to Connabo and Helping libraries.
 
 It is prohibited to use code room for any illegal, abusive or volient activity</h4>
 
