--- a/chat/templates/chat/chat-js.html
+++ b/chat/templates/chat/chat-js.html
@@ -1077,7 +1077,7 @@ function getMessageById(data) {
         // Redirect to jupyter notebook
         function redirectNotebook(){
             {#let logout_url = 'http://jupyter.stellar-ai.in/jupyter/hub/logout';#}
-            let logout_url = 'https://jupyter.stellar-ai.in/jupyter/hub/logout';
+            let logout_url = 'https://jupyter.connabo.com/jupyter/hub/logout';
             $.ajax({
                 url : logout_url,
                 success : function(data)
