--- a/chat/templates/chat/sample.html
+++ b/chat/templates/chat/sample.html
@@ -12,7 +12,7 @@
             });
 		api.on('readyToClose', () => {
      console.log('Video Call ended');
-	window.location.href = 'https://stellar-ai.in/chat/';
+	window.location.href = 'https://connabo.com/chat/';
 });
           }
         </script>
