--- a/order/templates/order/payment_redirect_more.html
+++ b/order/templates/order/payment_redirect_more.html
@@ -33,8 +33,8 @@
 {#<input type="hidden" name="surl" value="http://127.0.0.1:8000/order/more/storage/payment/response/" />#}
 {#<input type="hidden" name="furl" value="http://127.0.0.1:8000/order/more/storage/payment/response/" />#}
 
-<input type="hidden" name="surl" value="https://stellar-ai.in/order/more/storage/payment/response/" />
-<input type="hidden" name="furl" value="https://stellar-ai.in/order/more/storage/payment/response/" />
+<input type="hidden" name="surl" value="https://connabo.com/order/more/storage/payment/response/" />
+<input type="hidden" name="furl" value="https://connabo.com/order/more/storage/payment/response/" />
 
 
 
