logo dont changed

--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -95,6 +95,10 @@
 </head>
 
 <style>
+    @font-face {
+        font-family: lovelo;
+        src: url('{% static "social_assets/fonts/lovelo.otf" %}')
+    }
     .header-style1 .main-bar {
         background-color: #fff;
     }
@@ -108,19 +112,18 @@
 
     .code_connect_line_class {
         margin-top: -18px;
-        margin-left: 125px;
+        margin-left: 127px;
         font-size: 18px;
-        font-family: Quicksand;
+        font-family: lovelo;
         font-weight: 700;
-
-
     }
 
     .by_stellar_class {
         margin-left: 155px;
         margin-top: -32px;
                 font-size: 12px;
-        font-family: Quicksand;
+        {#font-family: lovelo;#}
+
         font-weight: 200;
             margin-bottom: -5px;
 
@@ -147,7 +150,8 @@
 
         .code_connect_line_class {
             margin-top: -18px;
-                    margin-left:-5px;
+                    margin-left:0px;
+
 
 
         }
