--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -34,12 +34,12 @@
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="keywords" content="Stellar, Connabo, Group Coding, Ai"/>
+    <meta name="keywords" content="Connabo, Group Coding, Ai"/>
     <meta name="author" content=""/>
     <meta name="robots" content=""/>
     <meta name="description"
           content="A website working on Artificial Intelligence algorithms and down the pike planning to model more Artificial Intelligent algorithms in its skeleton for the users."/>
-    <meta property="og:title" content="Steller AI"/>
+    <meta property="og:title" content="Connabo"/>
     <meta property="og:description"
           content="A website working on Artificial Intelligence algorithms and down the pike planning to model more Artificial Intelligent algorithms in its skeleton for the users."/>
     <meta property="og:image" content=""/>
