--- a/home/templates/home/temp.html
+++ b/home/templates/home/temp.html
@@ -316,9 +316,7 @@
                         <div class="overview-info wow fadeInLeft" data-wow-delay="0.3s">
 
                             <h2 class="title text-primary">FOCAL CODING WORKSPACE</h2>
-                            <p style="color:#74226c">A place where anyone can post their particular doubts ,
-                                questions , errors, discussions and expect instant solutions/help from anyone in the
-                                community.</p>
+                            <p style="color:#74226c">A common code-space where all the employees , project manager, clients of an organization can run, test and debug simultaneously on one particular code remotely.</p>
 
                             <!--                                <a href="#" class="btn btn-gradient btn-md radius-xl">Explor More</a>-->
 {#                            <a href="{% url 'user:register' %}" class="btn radius-xl btn-sign btn-aware">Start#}
